--- a/XPENS/index.html
+++ b/XPENS/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Xpens</title>
     <link rel="stylesheet" href="savingPlan.css" />
+    <link rel="stylesheet" href="./form.css" />
     <style>
       #app {
         width: 1100px;
@@ -26,6 +27,7 @@
       }
     body, html {
       margin: 0px;
+      padding: 0px;
     }
     .nav {
       align-items: center;
@@ -49,122 +51,6 @@
       display: flex;
       justify-content: center;
     }
-
-
-      /*Add income*/
-      #incomeForm {
-        color: rgb(54, 54, 54);
-        font-size: 1.2rem;
-        font-weight: 700;
-        font-family: Arial, Helvetica, sans-serif;
-        background-color: #90edf4;
-        display: flex;
-        flex-direction: column;
-        gap: 0.5rem;
-        padding: 2rem;
-        box-shadow: 0 0 2px 1px rgba(0, 0, 0, 0.3);
-      }
-      .btn {
-        border: none;
-        background-color: #4f5859;
-        color: #fff;
-        text-transform: uppercase;
-        font-weight: bold;
-      }
-
-    .container {
-      display: grid;
-      grid-template-columns: 200px 200px 200px;
-      grid-template-rows: 50px 50px 1fr 1fr;
-      align-items: start;
-    }
-
-    /*Add income*/
-    #myForm1 {
-      color: rgb(54, 54, 54);
-      font-size: 1.2rem;
-      font-weight: 700;
-      font-family: Arial, Helvetica, sans-serif;
-      background-color: #90edf4;
-      display: flex;
-      flex-direction: column;
-      gap: 0.5rem;
-      padding: 2rem;
-      box-shadow: 0 0 2px 1px rgba(0, 0, 0, 0.3);
-    }
-
-    .btn {
-      border: none;
-      background-color: #4f5859;
-      color: #fff;
-      text-transform: uppercase;
-      font-weight: bold;
-    }
-
-    input,
-    select {
-      outline-color: #4f5859;
-    }
-
-      /*Add Expense & Check plan*/
-      .filterContainer {
-        display: grid;
-        grid-template-columns: repeat(2, 16rem);
-        grid-template-rows: repeat(2, 3rem);
-        justify-content: space-between;
-      }
-      .error {
-        grid-column: 1/-1;
-        grid-row: 1/2;
-        align-self: center;
-        justify-self: center;
-      }
-
-    .btn:active,
-    .btn:hover {
-      border: 1px solid #4f5859;
-      background-color: #528c90;
-      color: #fff;
-      font-weight: bold;
-    }
-
-
-      .option1 {
-        grid-column: 1/2;
-        grid-row: 1/-1;
-      }
-
-      .option2 {
-        grid-column: 2/-1;
-        grid-row: 1/-1;
-        width: 100%;
-      }
-
-      .btnFilter {
-        grid-column: 1/-1;
-        grid-row: 2/-1;
-      }
-
-    /*End Add income*/
-
-    /*Add Expense & Check plan*/
-    .error {
-      grid-column: 1/-1;
-      grid-row: 1/2;
-      align-self: center;
-      justify-self: center;
-    }
-
-    .error p {
-      color: red;
-      font-size: 26px;
-    }
-/*
-    .btn {
-      grid-row: 3/4;
-      grid-column: 1/-1;
-    }
-      */
 
     tr:nth-child(even) {
       background-color: #dddddd;
